// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulTabs basic render w/ SEO: Stateful tabs render all tab content with renderAll 1`] = `
<Component
  renderAll={true}
>
  <StatefulTabs
    disabled={false}
    onChange={[Function]}
    overrides={Object {}}
    renderAll={true}
    stateReducer={[Function]}
  >
    <Tabs
      activeKey="0"
      disabled={false}
      onChange={[Function]}
      orientation="horizontal"
      overrides={Object {}}
      renderAll={true}
      tabWidth="intrinsic"
    >
      <ForwardRef
        $disabled={false}
        $orientation="horizontal"
        $tabWidth="intrinsic"
        data-baseweb="tabs"
      >
        <MockStyledComponent
          $disabled={false}
          $orientation="horizontal"
          $tabWidth="intrinsic"
          data-baseweb="tabs"
          forwardedRef={null}
        >
          <div
            data-baseweb="tabs"
            styled-component="true"
            test-style="{
  \\"display\\": \\"flex\\",
  \\"flexDirection\\": \\"column\\"
}"
          >
            <ForwardRef
              $disabled={false}
              $orientation="horizontal"
              $tabWidth="intrinsic"
              aria-orientation="horizontal"
              role="tablist"
            >
              <MockStyledComponent
                $disabled={false}
                $orientation="horizontal"
                $tabWidth="intrinsic"
                aria-orientation="horizontal"
                forwardedRef={null}
                role="tablist"
              >
                <div
                  aria-orientation="horizontal"
                  role="tablist"
                  styled-component="true"
                  test-style="{
  \\"display\\": \\"flex\\",
  \\"flexDirection\\": \\"row\\",
  \\"boxShadow\\": \\"inset 0 -5px $theme.colors.borderOpaque\\",
  \\"overflowX\\": \\"scroll\\",
  \\"::-webkit-scrollbar\\": {
    \\"display\\": \\"none\\"
  },
  \\"-ms-overflow-style\\": \\"none\\",
  \\"scrollbarWidth\\": \\"none\\"
}"
                >
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={true}
                    disabled={false}
                    expanded={false}
                    id="0"
                    key="0/.0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 1"
                  >
                    <ForwardRef
                      $active={true}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={true}
                      id="0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={true}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={true}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="true"
                              id="0"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px $theme.colors.primary\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 1
                            </div>,
                          }
                        }
                        id="0"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={true}
                          id="0"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px $theme.colors.primary\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 1
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="1"
                    key="1/.1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 2"
                  >
                    <ForwardRef
                      $active={false}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={false}
                      id="1"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="false"
                              id="1"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 2
                            </div>,
                          }
                        }
                        id="1"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="1"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 2
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="2"
                    key="2/.2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 3"
                  >
                    <ForwardRef
                      $active={false}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={false}
                      id="2"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="false"
                              id="2"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 3
                            </div>,
                          }
                        }
                        id="2"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="2"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 3
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                </div>
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={true}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="0"
              key="0/.0"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={true}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="0"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="0"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"block\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                >
                  Tab 1 content
                </div>
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="1"
              key="1/.1"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="1"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="1"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"none\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                >
                  Tab 2 content
                </div>
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="2"
              key="2/.2"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="2"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="2"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"none\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                >
                  Tab 3 content
                </div>
              </MockStyledComponent>
            </ForwardRef>
          </div>
        </MockStyledComponent>
      </ForwardRef>
    </Tabs>
  </StatefulTabs>
</Component>
`;

exports[`StatefulTabs basic render with initial state: Stateful tabs render correctly with initial state 1`] = `
<Component
  initialState={
    Object {
      "activeKey": "1",
    }
  }
>
  <StatefulTabs
    disabled={false}
    initialState={
      Object {
        "activeKey": "1",
      }
    }
    onChange={[Function]}
    overrides={Object {}}
    stateReducer={[Function]}
  >
    <Tabs
      activeKey="1"
      disabled={false}
      onChange={[Function]}
      orientation="horizontal"
      overrides={Object {}}
      renderAll={false}
      tabWidth="intrinsic"
    >
      <ForwardRef
        $disabled={false}
        $orientation="horizontal"
        $tabWidth="intrinsic"
        data-baseweb="tabs"
      >
        <MockStyledComponent
          $disabled={false}
          $orientation="horizontal"
          $tabWidth="intrinsic"
          data-baseweb="tabs"
          forwardedRef={null}
        >
          <div
            data-baseweb="tabs"
            styled-component="true"
            test-style="{
  \\"display\\": \\"flex\\",
  \\"flexDirection\\": \\"column\\"
}"
          >
            <ForwardRef
              $disabled={false}
              $orientation="horizontal"
              $tabWidth="intrinsic"
              aria-orientation="horizontal"
              role="tablist"
            >
              <MockStyledComponent
                $disabled={false}
                $orientation="horizontal"
                $tabWidth="intrinsic"
                aria-orientation="horizontal"
                forwardedRef={null}
                role="tablist"
              >
                <div
                  aria-orientation="horizontal"
                  role="tablist"
                  styled-component="true"
                  test-style="{
  \\"display\\": \\"flex\\",
  \\"flexDirection\\": \\"row\\",
  \\"boxShadow\\": \\"inset 0 -5px $theme.colors.borderOpaque\\",
  \\"overflowX\\": \\"scroll\\",
  \\"::-webkit-scrollbar\\": {
    \\"display\\": \\"none\\"
  },
  \\"-ms-overflow-style\\": \\"none\\",
  \\"scrollbarWidth\\": \\"none\\"
}"
                >
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="0"
                    key="0/.0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 1"
                  >
                    <ForwardRef
                      $active={false}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={false}
                      id="0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="false"
                              id="0"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 1
                            </div>,
                          }
                        }
                        id="0"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="0"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 1
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={true}
                    disabled={false}
                    expanded={false}
                    id="1"
                    key="1/.1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 2"
                  >
                    <ForwardRef
                      $active={true}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={true}
                      id="1"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={true}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={true}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="true"
                              id="1"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px $theme.colors.primary\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 2
                            </div>,
                          }
                        }
                        id="1"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={true}
                          id="1"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px $theme.colors.primary\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 2
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="2"
                    key="2/.2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 3"
                  >
                    <ForwardRef
                      $active={false}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={false}
                      id="2"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="false"
                              id="2"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 3
                            </div>,
                          }
                        }
                        id="2"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="2"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 3
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                </div>
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="0"
              key="0/.0"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="0"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="0"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"none\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                />
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={true}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="1"
              key="1/.1"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={true}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="1"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="1"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"block\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                >
                  Tab 2 content
                </div>
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="2"
              key="2/.2"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="2"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="2"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"none\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                />
              </MockStyledComponent>
            </ForwardRef>
          </div>
        </MockStyledComponent>
      </ForwardRef>
    </Tabs>
  </StatefulTabs>
</Component>
`;

exports[`StatefulTabs basic render: Stateful tabs render correctly 1`] = `
<Component>
  <StatefulTabs
    disabled={false}
    onChange={[Function]}
    overrides={Object {}}
    stateReducer={[Function]}
  >
    <Tabs
      activeKey="0"
      disabled={false}
      onChange={[Function]}
      orientation="horizontal"
      overrides={Object {}}
      renderAll={false}
      tabWidth="intrinsic"
    >
      <ForwardRef
        $disabled={false}
        $orientation="horizontal"
        $tabWidth="intrinsic"
        data-baseweb="tabs"
      >
        <MockStyledComponent
          $disabled={false}
          $orientation="horizontal"
          $tabWidth="intrinsic"
          data-baseweb="tabs"
          forwardedRef={null}
        >
          <div
            data-baseweb="tabs"
            styled-component="true"
            test-style="{
  \\"display\\": \\"flex\\",
  \\"flexDirection\\": \\"column\\"
}"
          >
            <ForwardRef
              $disabled={false}
              $orientation="horizontal"
              $tabWidth="intrinsic"
              aria-orientation="horizontal"
              role="tablist"
            >
              <MockStyledComponent
                $disabled={false}
                $orientation="horizontal"
                $tabWidth="intrinsic"
                aria-orientation="horizontal"
                forwardedRef={null}
                role="tablist"
              >
                <div
                  aria-orientation="horizontal"
                  role="tablist"
                  styled-component="true"
                  test-style="{
  \\"display\\": \\"flex\\",
  \\"flexDirection\\": \\"row\\",
  \\"boxShadow\\": \\"inset 0 -5px $theme.colors.borderOpaque\\",
  \\"overflowX\\": \\"scroll\\",
  \\"::-webkit-scrollbar\\": {
    \\"display\\": \\"none\\"
  },
  \\"-ms-overflow-style\\": \\"none\\",
  \\"scrollbarWidth\\": \\"none\\"
}"
                >
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={true}
                    disabled={false}
                    expanded={false}
                    id="0"
                    key="0/.0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 1"
                  >
                    <ForwardRef
                      $active={true}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={true}
                      id="0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={true}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={true}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="true"
                              id="0"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px $theme.colors.primary\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 1
                            </div>,
                          }
                        }
                        id="0"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={true}
                          id="0"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px $theme.colors.primary\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 1
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="1"
                    key="1/.1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 2"
                  >
                    <ForwardRef
                      $active={false}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={false}
                      id="1"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="false"
                              id="1"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 2
                            </div>,
                          }
                        }
                        id="1"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="1"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 2
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    $tabWidth="intrinsic"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="2"
                    key="2/.2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    overrides={Object {}}
                    title="Tab Link 3"
                  >
                    <ForwardRef
                      $active={false}
                      $disabled={false}
                      $isFocusVisible={false}
                      $orientation="horizontal"
                      $tabWidth="intrinsic"
                      aria-disabled={null}
                      aria-selected={false}
                      id="2"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $isFocusVisible={false}
                        $orientation="horizontal"
                        $tabWidth="intrinsic"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={
                          Object {
                            "current": <div
                              aria-selected="false"
                              id="2"
                              role="tab"
                              styled-component="true"
                              tabindex="0"
                              test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                            >
                              Tab Link 3
                            </div>,
                          }
                        }
                        id="2"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="2"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style="{
  \\"fontFamily\\": \\"$theme.typography.LabelSmall.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.LabelSmall.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.LabelSmall.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.LabelSmall.lineHeight\\",
  \\"boxSizing\\": \\"border-box\\",
  \\"color\\": \\"$theme.colors.tabColor\\",
  \\"cursor\\": \\"pointer\\",
  \\"paddingTop\\": \\"$theme.sizing.scale600\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale600\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"outline\\": \\"none\\",
  \\"outlineOffset\\": \\"-5px\\",
  \\"borderBottom\\": \\"solid 5px transparent\\",
  \\"display\\": \\"inline-block\\",
  \\"flexShrink\\": \\"0\\",
  \\":focus\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  },
  \\":hover\\": {
    \\"color\\": \\"$theme.colors.primary\\"
  }
}"
                        >
                          Tab Link 3
                        </div>
                      </MockStyledComponent>
                    </ForwardRef>
                  </TabComponent>
                </div>
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={true}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="0"
              key="0/.0"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={true}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="0"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="0"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"block\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                >
                  Tab 1 content
                </div>
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="1"
              key="1/.1"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="1"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="1"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"none\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                />
              </MockStyledComponent>
            </ForwardRef>
            <ForwardRef
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="2"
              key="2/.2"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="2"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="2"
                  role="tabpanel"
                  styled-component="true"
                  test-style="{
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"display\\": \\"none\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale600\\",
  \\"paddingRight\\": \\"$theme.sizing.scale600\\",
  \\"paddingTop\\": \\"$theme.sizing.scale500\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale500\\"
}"
                />
              </MockStyledComponent>
            </ForwardRef>
          </div>
        </MockStyledComponent>
      </ForwardRef>
    </Tabs>
  </StatefulTabs>
</Component>
`;
